# nexo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  nexo.spec  pyproject.toml  rewrite.py
.github/: FUNDING.yml
.github/workflows/: auto-tag-master.yml  ci.yml  release.yml
docs/: CLI_REFERENCE.md  CONTRIBUTING.md  CONVERSATION_GUIDE.md  DEVELOPING.md  MCP_GUIDE.md  USER_GUIDE.md  architecture.md  chatbot.md  cli.md  faq.md  mcp.md  quickstart.md  troubleshooting.md
docs/conversation_templates/: booking_flow.json  support_flow.json
nexo/: __init__.py  __main__.py  analyze.py  benchmark.py  build.py  cache.py  cluster.py  compression.py  conversation_templates.py  dashboard.py  detect.py  export.py  extract.py  hooks.py  ingest.py  manifest.py  mcp_subagent.py  query_service.py  security.py  serve.py  session.py  skill-windows.md  skill.md  stats.py  transcribe.py  validate.py  watch.py  wiki.py  workspace.py
scripts/: build-binaries.sh  install.ps1  install.sh
tests/: integration_test.sh  test_analyze.py  test_benchmark.py  test_binary_build.sh  test_build.py  test_cache.py  test_claude_md.py  test_cli_doctor.py  test_cli_watch.py  test_cli_workspace.py  test_cli_workspace_query.py  test_cluster.py  test_confidence.py  test_conversation.py  test_dashboard.py  test_detect.py  test_export.py  test_extract.py  test_hooks.py  test_hypergraph.py  test_ingest.py  test_install.py  test_install_flow.sh  test_languages.py  test_mcp_server.py  test_mcp_subagent.py  test_multilang.py  test_pipeline.py  test_query_service.py  test_rationale.py  test_report.py  test_security.py  test_semantic_similarity.py  test_serve.py  test_transcribe.py  test_validate.py  test_watch.py  test_wiki.py  test_workspace.py  test_workspace_query.py
tests/fixtures/: sample.cs
tests/integration-out/: run_03-step-2-detect-files.sh  run_06-part-a-structural-extraction-for-code-files.sh  run_14-step-5-label-communities.sh  (+3 more)
(+81 files in other folders)
